--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -11,7 +11,7 @@
       rgba($primary-color, 0.9),
       rgba($primary-color, 0.3)
     ),
-    url('../img/shrek-5.jpg') center top;
+    url('../img/alt.jpg') center top;
   background-size: cover;
 
   h2 {
