--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -10,7 +10,7 @@
         rgba($primary-color, 0.9),
         rgba($primary-color, 0.3)
       ),
-      url('../img/shrek-5.jpg') center top;
+      url('../img/alt.jpg') center top;
     background-size: cover;
     display: flex;
     flex-direction: column;
